--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 
-:root { 
+:root {
   --text-color: #f9f9f9;
   --bg-url: url(assets/bgmobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
@@ -237,4 +237,54 @@ a {
   to {
     left: 0;
   }
+}
+
+/* Avatar Pop-up */
+
+.popup {
+  z-index: 999;
+  position: fixed;
+
+  max-height: 90%;
+  max-width: 588px;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  background-color: var(--stroke-color);
+  padding: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 8px;
+
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+}
+
+.popup img {
+  max-height: 100%;
+  max-width: 100%;
+  display: block;
+  margin: 0 auto;
+  object-fit: contain;
+}
+
+.closeButton {
+  height: 32px;
+  width: 32px;
+
+  text-align: center;
+  margin: 0 auto;
+  color: var(--text-color);
+  font-size: 2em;
+  margin-top: 4vh;
+
+  transition: all 0.5s ease;
+}
+
+.closeButton:hover {
+  transform: scale(1.1);
+  filter: invert(1);
+  -webkit-filter: invert(1);
+  -webkit-filter: invert(100%);
 }
