--- a/style.css
+++ b/style.css
@@ -220,6 +220,12 @@ a {
   }
 }
 
+/* @media (prefers-color-scheme: dark) {
+  .test {
+    border: 1px solid #ffffff;
+  }
+} */
+
 /* animations */
 @keyframes slide-in {
   from {
