--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ a {
   left: 50%;
   transform: translate(-50%, -50%);
 
-  background-color: var(--stroke-color);
+  background-color: var(--surface-color);
   padding: 30px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   border-radius: 8px;
@@ -295,12 +295,15 @@ a {
   font-size: 2em;
   margin-top: 4vh;
 
-  transition: all 0.5s ease;
+  border-radius: 50%;
+
+  transition: all 0.4s ease;
 }
 
 .closeButton:hover {
+  background: var(--social-links-hover);
   transform: scale(1.1);
-  filter: invert(1);
+  /* filter: invert(1);
   -webkit-filter: invert(1);
-  -webkit-filter: invert(100%);
+  -webkit-filter: invert(100%); */
 }
