--- a/style.css
+++ b/style.css
@@ -247,9 +247,31 @@ a {
 
 /* Avatar Pop-up */
 
+.overlay {
+  visibility: hidden;
+  opacity: 0;
+
+  z-index: 998;
+  position: fixed;
+
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+
+  transition: all 0.3s ease-in-out;
+}
+
 .popup {
   visibility: hidden;
   opacity: 0;
+
+  border: 1px solid var(--stroke-color);
 
   z-index: 999;
   position: fixed;
