--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ a {
   padding: 10px;
   max-width: 460px;
   max-height: 300px;
-  margin-top: 20px;
+  margin-top: 3vh;
   text-align: center;
   overflow: auto;
 }
@@ -331,7 +331,7 @@ a {
   margin: 0 auto;
   color: var(--text-color);
   font-size: 2em;
-  margin-top: 20px;
+  margin-top: 3vh;
 
   border-radius: 50%;
 
