--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 
 :root {
   --text-color: #f9f9f9;
+  --select-text-color: #1f1e22;
+  --text-bg-color: #f9f9f9;
   --bg-url: url(assets/bgmobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.1);
@@ -18,6 +20,8 @@
 
 .light {
   --text-color: #1f1e22;
+  --select-text-color: #f9f9f9;
+  --text-bg-color: #1f1e22;
   --bg-url: url(assets/bgmobilelight.jpg);
   --stroke-color: rgba(0, 0, 0, 0.5);
   --surface-color: rgba(0, 0, 0, 0.1);
@@ -341,4 +345,16 @@ a {
 .closeButton:hover {
   background: var(--social-links-hover);
   transform: scale(1.1);
+}
+
+/* Selection Color */
+::-moz-selection {
+  /* Code for Firefox */
+  color: var(--select-text-color);
+  background: var(--text-bg-color);
+}
+
+::selection {
+  color: var(--select-text-color);
+  background: var(--text-bg-color);
 }
