--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@
   --surface-color-hover: rgba(255, 255, 255, 0.05);
   --social-links-hover: rgba(255, 255, 255, 0.2);
   --switch-bg-url: url(assets/moon-stars.svg);
+  --scrollbarbg: rgba(255, 255, 255, 0.1);
+  --scrollbarbar: rgba(255, 255, 255, 0.2);
+  --scrollbarhover: rgba(255, 255, 255, 0.5);
 }
 
 .light {
@@ -28,6 +31,9 @@
   --surface-color-hover: rgba(0, 0, 0, 0.05);
   --social-links-hover: rgba(0, 0, 0, 0.2);
   --switch-bg-url: url(assets/sun.svg);
+  --scrollbarbg: rgba(0, 0, 0, 0.1);
+  --scrollbarbar: rgba(0, 0, 0, 0.2);
+  --scrollbarhover: rgba(0, 0, 0, 0.5);
 }
 
 body {
@@ -357,4 +363,19 @@ a {
 ::selection {
   color: var(--select-text-color);
   background: var(--text-bg-color);
+}
+
+.popup .text::-webkit-scrollbar {
+  width: 5px;
+  border-radius: 1em;
+  background-color: var(--scrollbarbg);
+}
+
+.popup .text::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbarbar);
+  border-radius: 0.3em;
+}
+
+.popup .text::-webkit-scrollbar-thumb:hover {
+  background-color: var(--scrollbarhover);
 }
